lingtypology 1.1.2 (10.02.2019)
- replace "ejective_and_n_consonants" with "phonological_profiles" dataset adding there new columns: tone, stress, long_vowels
- add an argument "include.dialects" to the "lang.aff()" function
- the argument "atlas_name" of the "atlas.database()" function replaced with "atlas.name"

lingtypology 1.1.1 (09.02.2019)
- make "minicharts" and "label" work together!
- fix "rowr" dependency (#43)
- change glottolog v. 2.7 to v, 4.1. Now "glottolog.original" and "glottolog.modified" replaced with "glottolog". There are much more data and dialects included. (#12, #36, #42)
- remove all arguments "glottolog.source"
- remove all functions that worked with countries :(

lingtypology 1.0.15 (22.11.2019)
- remove NA apearence from popup window when "fake" language argument is used.
- fast fix of colors tests

lingtypology 1.0.14 (25.08.2019)
- font in a legend changed to the same as the label font
- change rgeos, MASS and sp packages to suggetions
- add "uralex.feature()" function API for Uralic Lexicon Database
- correct "phoible.feature()" function after minor changes on their github. From now this function will return the whole phoible database
- rebuild glottolog database, so there will be minor changes in affiliations and number of languages since there were a lot of changes
- add first attempt to create high quality maps with ggmap.feature(). This function need further improvement

lingtypology 1.0.13 (14.06.2018)
 - add the possibility to use "fake" language in the "map.feature()" function.
 - lingtypology take into account leaflet 2.0.0 updates
 - add possibility to use combination of shape and label arguments
 - the base layer of the mini-map is the same as the base layer of the main map
 - add the "label.font" argument to the "map.feature()" function
 - update a "circassian" database
 - add the "valpal.feature()" function API for Valency Patterns Database