@@ -1,7 +1,7 @@
 Package: lingtypology
 Type: Package
 Title: Linguistic Typology and Mapping
-Version: 1.1.1
+Version: 1.1.2
 Depends: R (>= 3.5.0)
 Imports:
     leaflet,
