@@ -2,6 +2,7 @@ lingtypology 1.1.2 (10.02.2019)
 - replace "ejective_and_n_consonants" with "phonological_profiles" dataset adding there new columns: tone, stress, long_vowels
 - add an argument "include.dialects" to the "lang.aff()" function
 - the argument "atlas_name" of the "atlas.database()" function replaced with "atlas.name"
+- change arguments "longitude_width" and "latitude_width" into "longitude.width" and "latitude_width"
 
 lingtypology 1.1.1 (09.02.2019)
 - make "minicharts" and "label" work together!
